Bug 42142 - mpt2sas: Number specified in wrong base.
Summary: mpt2sas: Number specified in wrong base.
Status: CLOSED CODE_FIX
Alias: None
Product: SCSI Drivers
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 low
Assignee: scsi_drivers-other
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-31 19:56 UTC by Daniel Bradshaw
Modified: 2012-06-13 15:12 UTC (History)
3 users (show)

See Also:
Kernel Version: 3.0.4
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Daniel Bradshaw 2011-08-31 19:56:38 UTC
I think this is the right product/component combination, sorry if it isn't.

I was hunting through mpt2sas chasing unrelated hardware gremlins and noticed an odd bit of code, I've checked the latest version on lxr and it's still there.

http://lxr.linux.no/linux+v3.0.4/drivers/scsi/mpt2sas/mpt2sas_base.c#L611

 611        /* eat the loginfos associated with task aborts */
 612        if (ioc->ignore_loginfos && (log_info == 30050000 || log_info ==
 613            0x31140000 || log_info == 0x31130000))
 614                return;
 615

I'm assuming that the first of those log_info checks is meant to be 0x30050000, as specified it is rendered always false by the bus type check a few lines above.

It's a minor detail, but I thought I'd report it anyway since it's so trivial to fix if you have the source to hand.

Regards,
Daniel
Comment 1 Florian Mickler 2012-04-04 15:04:18 UTC
A patch referencing this bug report has been merged in Linux v3.4-rc1:

commit 714be35885093305b7491cc3eea959bb3e1be6f2
Author: Sathisha Nanjappa <sathisha.nanjappa@hp.com>
Date:   Tue Mar 13 11:59:28 2012 -0700

    [SCSI] mpt2sas: remove extraneous sas_log_info messages

Note You need to log in before you can comment on or make changes to this bug.